--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # ========================================
+# Nested Git Repositories
+# ========================================
+/go
+
+# ========================================
 # Dependencies
 # ========================================
 /node_modules
